@@ -154,6 +154,7 @@ New in v0.8.00 (2016/07/??)
     allowing to push write performance towards Azure above 1 Gb/s for large
     back-ups. If a user does not provide the parameters the defaults of the
     Azure storage library will continue to be used.
+* Replace incoming non-ASCII chars in commandline.py
 
 
 New in v0.7.08 (2016/07/02)
